update 15/11/2025